add python api, test and setup.py

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,5 @@ project(npn)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(npn main.cpp)
+#add_executable(npn_exe npn/npn.cpp)
+add_library(npn MODULE npn/npn.cpp)
