support returning details of NPN transformation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,4 +4,4 @@ project(npn)
 set(CMAKE_CXX_STANDARD 14)
 
 #add_executable(npn_exe npn/npn.cpp)
-add_library(npn MODULE npn/npn.cpp)
+add_library(npn SHARED npn/npn.cpp)
